testsuite/tests/parser/should_fail/T18251d.stderr

T18251d.hs:6:1: error:
    • @-binders in functions are not allowed yet
    • In an equation for ‘f’: f @a _ = ()
      The equation for ‘f’ has two value arguments,
        but its type ‘a -> ()’ has only one
